--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -280,41 +280,41 @@ GeV.
 %\begin{textbox}
 \vspace{2cm}
 \section*{{\Huge {\sf FRAGMENT YIELD}}}
-\vspace{-1cm}
+%\vspace{-1cm}
 %Fragments produced in reaction: p(1 GeV) + Pb
 \begin{center}
 
 \includegraphics[scale=0.70]{images/fragments.eps}
 
-\vspace{1.5cm}
+\vspace{1.0cm}
 %Isotope production:
 \includegraphics[scale=0.60]{images/pPbIsotopes.eps}
-{\Large {\sf {\linespread{1.0} Fragment production of the {\sf INCL} and {\sf ABLA} \cite{abla} models. Black and red histograms are the
-    results from the original {\sf FORTRAN} version and new {\sf C++} implementation, respectively.}}}
 \end{center}
+{\large {\sf Fragment production of the {\sf INCL} and {\sf ABLA} \cite{abla} models. Black and red histograms are the
+    results from the original {\sf FORTRAN} version and new {\sf C++} implementation, respectively.}}
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\begin{textbox}
 
-\vspace{0.5cm}
+%\vskip-0.5cm
 \section*{{\Huge {\sf NEUTRON PRODUCTION}}}
-\vspace{-1.6cm}
+\vskip-1.6cm
 %Neutron production:
 \begin{center}
 %\includegraphics[scale=0.5]{images/zirkonium.eps}
 %\includegraphics[scale=0.5]{images/iron.eps}
-\includegraphics[scale=0.69]{images/aluminumDetail.eps}
-{\Large {\sf {\linespread{1.0} Double-differential for neutron production cross section
+\includegraphics[scale=0.69]{images/aluminum.eps}
+\end{center}
+{\large {\sf Double-differential for neutron production cross section
     from {\sf Geant4} {\sf INCL} and {\sf ABLA} models. Black and red histograms are the
     results from the original {\sf FORTRAN} version and new {\sf C++} implementation, respectively. Data points are
-    from Ref.~\cite{data}.}}}
-\end{center}
+    from Ref.~\cite{data}.}}
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\vspace{3cm}
+%\vskip4cm
 
 \begin{textbox}
 \section*{{\Huge {\sf LIGHT TARGETS}}}
