Added missing references

--- a/poster/poster.tex
+++ b/poster/poster.tex
@@ -290,8 +290,8 @@ GeV.
 %Isotope production:
 \includegraphics[scale=0.60]{images/pPbIsotopes.eps}
 \end{center}
-{\large {\sf Fragment production of the {\sf INCL} and {\sf ABLA} \cite{abla} models. Black and red histograms are the
-    results from the original {\sf FORTRAN} version and new {\sf C++} implementation, respectively.}}
+{\large {\sf Fragment production of the {\sf INCL} and {\sf ABLA} \cite{abla, abla1, abla2} models. Black and red histograms are the
+    results from the original {\sf FORTRAN} version and new {\sf C++} implementation, respectively. Data is from Ref \cite{gsifragments}}}
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -445,10 +445,15 @@ A. Heikkinen, P. Kaitaniemi, and A. Boudard,
 {\em Implementation of INCL4 cascade and ABLA evaporation codes in Geant4},
 Journal of Physics: Conference Series 119 (2008) 032024, 
 {\sf [doi:10.1088/1742-6596/119/3/032024]}
-
 \bibitem{abla} J. Benlliure et al., \emph{Calculated nuclide
     production yields in relativistic collisions of fissile nuclei},
   Nuc. Phys. A628 (1998) 458
+\bibitem{abla1} J. J. Gaimard et al., \emph{},
+  Nuc. Phys. A531 (1991) 709
+\bibitem{abla2} A. R. Junghans et al., \emph{},
+  Nuc. Phys. A629 (1998) 635
+\bibitem{gsifragments} T. Enqvist et al. \emph{},
+  Nucl. Phys. A686 (2001) 481
 \bibitem{g4incl} \emph{Geant4 Physics Reference Manual: INCL~4.2 Cascade and ABLA~V3 Evaporation with Fission} 
 %\\ {\tt http://geant4.web.cern.ch/\-geant4/\-UserDocumentation/\-UsersGuides/\-PhysicsReferenceManual/\-html/\-node185.html}
 
