history and plans update

--- a/notes.tex
+++ b/notes.tex
@@ -83,4 +83,17 @@ escapeinside={\%*}{*)},          % if you want to add a comment within your code
 label=listing:relRef
 }
 
+\section{PLANS}
+\begin{itemize}
+\item 090330 Post meeting updates to poster and archieving.
+\item 090324 Poster presentation at CHEP'09 Prague.
+\end{itemize}
+
+\section{HISTORY}
+\begin{itemize}
+\item 090317 No comments from GF. Last tuning and submitting to printing. (Ready on Thursday)
+\item 090316  PK added  fixed image and comments from AB. 
+\item 090313 Based on Physics Day poster prepared with PK the poster, 
+             and sent reuest to comments for Alain and Gunter.
+\end{itemize}
 \end{appendix}
