--- a/notes.tex
+++ b/notes.tex
@@ -91,6 +91,8 @@ label=listing:relRef
 
 \section{HISTORY}
 \begin{itemize}
+\item 090504 Merge with PK. JPSC template added from \url{http://www.iop.org/EJ/journal/-page=extra.3/1742-6596} and
+related Makefile target {\em paper} added.
 \item 090317 No comments from GF. Last tuning and submitting to printing. (Ready on Thursday)
 \item 090316  PK added  fixed image and comments from AB. 
 \item 090313 Based on Physics Day poster prepared with PK the poster, 
