--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -28,7 +28,13 @@ An example application utilizing the physics list is introduced.
 \end{abstract}
 
 \section{Introduction}
+\input{introduction.tex}
+
+\section{Introduction}
 These guidelines show how to prepare articles for publication in \jpcs\ using \LaTeX\ so they can be published quickly and accurately. Articles will be refereed by the \corg s but the accepted PDF will be published with no editing, proofreading or changes to layout. It is, therefore, the author's responsibility to ensure that the content and layout are correct.  This document has been prepared using \cls\ so serves as a sample document. The class file and accompanying documentation are available from \verb"http://jpcs.iop.org".
+
+\section{INCL and ABLA models in Geant4} \label{sec:models}
+\input{models}
 
 \section{Preparing your paper}
 \verb"jpconf" requires \LaTeXe\ and  can be used with other package files such
