Moved physics list description to physicslist.tex

--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -290,6 +290,7 @@ A.H. main author, P.K. coding, A.B. use case physics and INCL, G.F. Geant4 physi
 \input{models.tex}
 
 \section{PHYSICS LIST FOR SPALLATION STUDIES} \label{sec:list}
+\input{physicslist.tex}
 
 \section{EXAMPLE APPLICATION} \label{sec:example}
 
