--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -36,6 +36,9 @@ These guidelines show how to prepare articles for publication in \jpcs\ using \L
 \section{INCL and ABLA models in Geant4} \label{sec:models}
 \input{models}
 
+\section{Physics list} \label{sec:list}
+\input{physicslist.tex}
+
 \section{Preparing your paper}
 \verb"jpconf" requires \LaTeXe\ and  can be used with other package files such
 as those loading the AMS extension fonts 
