Added section label

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -27,7 +27,7 @@ and light ion beams (up to Carbon) are discussed.
 An example application utilizing the physics list is introduced.
 \end{abstract}
 
-\section{Introduction}
+\section{Introduction} \label{sec:intro}
 \input{introduction.tex}
 
 \section{INCL and ABLA models in Geant4} \label{sec:models}
