Start writing the ADS introduction

--- a/introduction.tex
+++ b/introduction.tex
@@ -8,6 +8,17 @@ In this paper we are interested on issues relevant to nuclear physics applicatio
 neutron production and modelling of spallation reactions.  
 
 %ADS
+
+The goal of accelerator driven sub-critical reactor (Accelerator
+Driven System, ADS) development is to provide safer and more effective
+methods of nuclear power production. The most important benefits of
+this new type of reactor include improved safety. In case of an
+emergency the accelerator can be shut down which in turn shuts down
+the reactor. Another important safety benefit is that the system
+transmutes nuclear waste to less harmful isotopes.
+
+The ADS is based on two main components: accelerator and spallation target.
+
 This paper is organized as follows:
 key Geant4 models (intra-nuclear cascade INCL or Liege cascade, and ABLA evaporation-fission model) 
 applied in this work are introduced in Sec.~\ref{sec:models},
