Added new neutron production validation plot
This plot is for test run p(1600 MeV) + Fe. The run was made using better
statistics than normally (1M events).

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -186,6 +186,21 @@ Data is from Ref.~\cite{data}.}
 \end{center}
 \end{figure}
 
+\begin{figure}
+\begin{center}
+%\includegraphics[scale=0.5]{images/zirkonium.eps}
+%\includegraphics[scale=0.5]{images/iron.eps}
+\includegraphics[scale=0.70]{images/proton1600MeVFe.eps}
+\caption{Double-differential for neutron production cross section
+    from Geant4 INCL and ABLA models in p(1.2 GeV) + Fe $\rightarrow$ n + X reaction.
+Black and red histograms are the
+    results from the original FORTRAN version and new C++ implementation, respectively. 
+Neutron evaporation from ABLA model is shown below E $\simeq$ 20 MeV.
+Data is from Ref.~\cite{data}.}
+\label{fig:neutronAl}
+\end{center}
+\end{figure}
+
 
 %\begin{figure}
 %\begin{center}
