Mention the redesign plan

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -91,6 +91,10 @@ Recently these implementations have been translated into C++ and codes provides
 as part of Geant4 toolkit \cite{heikkinen03aPaper}. 
 First beta release of INCL 4.2 and ABLA v3 was in Geant4  9.1 (December 2007).
 
+Currently new versions of INCL and ABLA versions in Geant4 are pure
+FORTRAN to C++ translations. Our goal is to completely redesign the
+INCL cascade code using modern OO techniques.
+
 \section{Geant4 physics lists}
 
 A unique feature of Geant4 is to  
