Started writing INCL4.2 carbon extension description

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -258,10 +258,22 @@ Also, results from Geant4 Bertini cascade with independent evaporation model are
 \end{figure}
 
 \section{Carbon projectiles}
+
+Standard INCL4.2 contains support for light ion projectiles up to and
+including Alphas. The INCL4.2 method of handling composite projectiles
+is a simple extension of the single projectile particle case. Instead
+of shooting a single projectile particle we shoot an ion that consists
+of protons and neutrons.
+
+This support is being extended to include Carbon-12
+ions, commonly used in medical applications.
+
 Carbon beams are of particular interest for medical applications of Geant4, 
 and recently, a Carbon projectile support has been added to the INCL cascade. 
 
 An ongoing work is to improve of the physics models for the treatment of light ion beams up to Carbon.
+
+
 
 %\begin{figure}[h]
 %\begin{minipage}{14pc}
