--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -312,10 +312,19 @@ An ongoing work is to improve of the physics models for the treatment of light i
 \centering
 \begin{tabular}{@{}*{7}{l}}
 \br
-Option&Description\\
+Models&Description\\
 \mr
+\verb"Cascade model"& INCL/ABLA for protons, neutrons, $\pi^+$ and $\pi^-$\\
+\verb"High energy model"& QGSP\\
+\verb"Electromagnetic physics"& Geant4 standard EM\\
+\br
+Use-cases& \\
+\br
 \verb"Al-"&Targets heavier than Aluminium.\\
-\verb"150~MeV -"&Projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV.\\
+\verb"150~MeV - 3~GeV"&Projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV.\\
+\verb"Applications"& Spallation studies, ADS \\
+                   & Neutron production \\
+                   & Fragment production \\
 \br
 \end{tabular}
 \end{table}
