Added a link to an ADS document

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -61,6 +61,7 @@ In this paper we are interested on issues relevant to nuclear physics applicatio
 neutron production and modelling of spallation reactions.  
 
 %ADS
+% Material: http://users.ictp.it/~pub_off/lectures/lns012/Kadi_002.pdf
 
 The goal of accelerator driven sub-critical reactor (Accelerator
 Driven System, ADS) development is to provide safer and more effective
