ADS system components

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -71,7 +71,8 @@ emergency the accelerator can be shut down which in turn shuts down
 the reactor. Another important safety benefit is that the system
 transmutes nuclear waste to less harmful isotopes.
 
-The ADS is based on two main components: accelerator and spallation target.
+The main components of an ADS system are: accelerator, spallation
+target and sub-critical core.
 
 This paper is organized as follows:
 key Geant4 models (intra-nuclear cascade INCL or Liege cascade, and ABLA evaporation-fission model) 
