Refer to the Fermi break-up fig in the text

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -249,6 +249,10 @@ So, INCL can now be used with the Geant4 Fermi break-up model.
 Currently, INCL interface provides Fermi break-up \cite{g4incl} for
 remnant nuclei lighter than A = 13 and ABLA for heavier elements.
 
+Comparison of the fragment production results for reaction p(1.0 GeV)
++ C calculated using INCL and ABLA, INCL with Fermi break-up and
+Geant4 Bertini cascade are shown in figure \ref{fig:fermibreakup}.
+
 \section{1 GeV proton  on carbon}
 \begin{figure}
 %\begin{center}
@@ -257,6 +261,7 @@ remnant nuclei lighter than A = 13 and ABLA for heavier elements.
 \caption{Comparison of massnumber distributions given INCL4.2 cascade with ABLA evaporation 
 and with standard Geant4 Fermi break up model against data from \cite{a}.
 Also, results from Geant4 Bertini cascade with independent evaporation model are shown. }
+\label{fig:fermibreakup}
 \end{figure}
 
 \section{Carbon projectiles}
