Added supported projectile particles to the summary table

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -327,6 +327,7 @@ Models&Description\\
 Use-cases& \\
 \br
 \verb"Al-"&Targets heavier than Aluminium.\\
+\verb"Particles"& proton, neutron, $\pi^+$ and $\pi^-$\\
 \verb"150~MeV - 3~GeV"&Projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV.\\
 \verb"Applications"& Spallation studies, ADS \\
                    & Neutron production \\
