Correct affiliation (both HIP and CEA)

--- a/chep09geant4.tex
+++ b/chep09geant4.tex
@@ -7,7 +7,7 @@
 \title{A Geant4 physics list for spallation and related nuclear physics applications 
 based on INCL and ABLA models}
 
-\author{A Heikkinen$^1$, A Boudard$^2$, P Kaitaniemi$^2$ and G Folger$^3$}
+\author{A Heikkinen$^1$, A Boudard$^2$, P Kaitaniemi$^{1,2}$ and G Folger$^3$}
 
 %\author{P J Smith$^1$, T M Collins$^2$, 
 %R J Jones$^{3,}$\footnote[4]{Present address:
